# hho-peaceman

./: .gitignore  CMakeLists.txt  README.md
PeacemanTests/: CMakeLists.txt  test_computation_time.cpp  test_oil_volume.cpp  test_oil_volume_discontinuous.cpp  test_peaceman.cpp
UnitTests/: CMakeLists.txt  test_adr.cpp  test_adr_on_reconstructed_velocity.cpp  test_crank_nicholson_adr.cpp  test_darcy_flux.cpp  test_darcy_velocity.cpp  test_diffusion_dispersion_tensor.cpp  test_diffusion_neumann.cpp  test_function_reconstruction.cpp  test_poisson_dirichlet.cpp  test_poisson_neumann.cpp  test_time_dependent_ad.cpp  test_viscosity.cpp
meshes/PeacemanTests/: scaled_1_1.typ1  scaled_1_2.typ1  scaled_1_3.typ1  scaled_1_4.typ1  scaled_1_5.typ1  scaled_2_1.typ1  scaled_2_2.typ1  scaled_2_3.typ1  scaled_2_4.typ1  scaled_2_5.typ1  scaled_4_1_1.typ1  scaled_4_1_2.typ1  scaled_4_1_3.typ1  scaled_4_1_4.typ1  scaled_4_1_5.typ1  scaled_pi6_1.typ1  scaled_pi6_2.typ1  scaled_pi6_3.typ1  scaled_pi6_4.typ1  scaled_pi6_5.typ1
meshes/PeacemanTests/special/: cart10x10.typ1  cart20x20.typ1  cart30x30.typ1  cart40x40.typ1  cart50x50.typ1  cart60x60.typ1  cart70x70.typ1  triangular10x10.typ1  triangular15x15.typ1  triangular20x20.typ1  triangular25x25.typ1  triangular5x5.typ1
meshes/UnitTests/: pi6_tiltedhexagonal_2.typ1  pi6_tiltedhexagonal_3.typ1  pi6_tiltedhexagonal_4.typ1  pi6_tiltedhexagonal_5.typ1
scripts/: contour3d.py  lineplot.py  plot3d.py
src/: CMakeLists.txt  test_base.hpp
src/Mesh/: CMakeLists.txt  README.md  basis.hpp  eigen.hpp  element_generic.hpp  element_simplicial.hpp  gauss.hpp  geometry.hpp  geometry_generic.hpp  geometry_simplicial.hpp  ident.hpp  loader.hpp  mapped_file.cpp  mapped_file.h  mesh.hpp  mesh_storage.hpp  point.hpp  strtot.hpp  util.cpp  util.h
src/hho/: .clang-format  adr_solver.hpp  advection_reaction_operator.hpp  basic_element.hpp  basis.hpp  common.hpp  diffusion_neumann_solver.hpp  global_interpolator.hpp  hybrid_element.hpp  integrator.hpp  interpolation_operator.hpp  load_operator.hpp  operator.hpp  post_processing.hpp  solver_base.hpp  variable_diffusion_operator.hpp
src/hho/peaceman/: backward_difference_formula.hpp  crank_nicholson.hpp  crank_nicholson_adr_solver.hpp  darcy_velocity_reconstruction.hpp  diffusion_dispersion_tensor_construction.hpp  dirac_function.hpp  function_reconstruction.hpp  peaceman_solver.hpp  time_dependent_advection_diffusion_solver.hpp  time_stepping.hpp  viscosity_construction.hpp
